--- a/Ejercicio006/index.html
+++ b/Ejercicio006/index.html
@@ -24,6 +24,9 @@
             <div class="number">1</div>
             <div class="number">2</div>
             <div class="number">3</div>
+            <div class="number">0</div>
+            <div class="number">.</div>
+            <div class="number">AC</div>
         </div>
     </div>
     
